--- a/CookBooks/Views/Recipe/Detail.cshtml
+++ b/CookBooks/Views/Recipe/Detail.cshtml
@@ -14,7 +14,7 @@
     <!-- Portfolio Item Heading -->
     <h1 class="my-4">
         @Model.Name
-        <small>@Model.Category</small>
+        <small>@Model.RecipeCategory</small>
     </h1>
 
     <!-- Portfolio Item Row -->
