--- a/CookBooks/wwwroot/css/styles.css
+++ b/CookBooks/wwwroot/css/styles.css
@@ -333,3 +333,10 @@ footer {
   color: #f9f9f9;
   font-weight: bold;
 }
+.entry:not(:first-of-type) {
+    margin-top: 10px;
+}
+
+.glyphicon {
+    font-size: 12px;
+}
