--- a/CookBooks/Views/Recipe/Index.cshtml
+++ b/CookBooks/Views/Recipe/Index.cshtml
@@ -38,7 +38,7 @@
                                 
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a type="button" asp-controller="Recipe" asp-action="Detail" asp-route-id="@item.RecipeId" class="btn btn-sm btn-outline-secondary">View</a>
+                                        <a type="button" asp-controller="Recipe" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">View</a>
                                         <a type="button" class="btn btn-sm btn-outline-secondary">Edit</a>
                                     </div>
                                     <small class="text-muted">@item.RecipeDifficultyLevel</small>
