--- a/CookBooks/Views/Recipe/Create.cshtml
+++ b/CookBooks/Views/Recipe/Create.cshtml
@@ -64,70 +64,95 @@
         <span asp-validation-for="RecipeDifficultyLevel" class="text-danger"></span>
     </div>
 *@
-    <p1> Ingredients</p1>
+   @* <p1> Ingredients</p1>
 
    <div>
         <table id="tingredients">
             <tbody class="table" id="tbbodyIngredients">
-                <tr>
-
+                
                     @if (Model == null || Model.Ingredients.Count < 2)
                     {
-                        <td>
-                            <input asp-for="Ingredients[0].Ingredient" class="form-control" placeholder="Enter 1. ingredients" />
-                        </td>
-                        <td>
-                            <span asp-validation-for="Ingredients[0].Ingredient" class="text-danger"></span>
-                        </td>
-
-
-                    }
-                    else
+                        <tr id="ingredient0">
+                            <td>
+                                <input asp-for="Ingredients[0].Ingredient" class="form-control" placeholder="Enter 1. ingredients" />
+                            </td>
+                            <td>
+                                <span asp-validation-for="Ingredients[0].Ingredient" class="text-danger"></span>
+                            </td>
+                    </tr>
+                }
+                else
+                {
+                    for (int i = 0; i < Model.Ingredients.Count; i++)
                     {
-                        for (int i = 0; i < Model.Ingredients.Count; i++)
+                        var ingredientcount = i + 1;
+                        var ingredientId ="ingredient" + i;
+
+                        if (Model.Ingredients[i].Ingredient == null)
                         {
-                            if (i == Model.Ingredients.Count - 1 && Model.Ingredients[i].Ingredient == null)
-                            {
-                            <tr>
-                                <td>
-                                    <input asp-for="Ingredients[i].Ingredient" class="form-control" placeholder="Enter 1. ingredients" value="Enter @Model.Ingredients.Count . ingredients " />
-                                </td>
-                                <td>
-                                    <span asp-validation-for="Ingredients[i].Ingredient" class="text-danger"></span>
-                                </td>
-                            </tr>
+
+                            <tr id="@ingredientId">
+                                    <td>
+                                    <input asp-for="Ingredients[i].Ingredient" class="form-control" placeholder="Enter 1. ingredients" value="Enter @ingredientcount . ingredients " />
+                                    </td>
+                                    <td>
+                                        <span asp-validation-for="Ingredients[i].Ingredient" class="text-danger"></span>
+                                    </td>
+                                </tr>
                             }
                             else
                             {
 
-                            <tr>
-                                <td>
-                                    <input asp-for="Ingredients[i].Ingredient" class="form-control" placeholder="Enter 1. ingredients" value="@Model.Ingredients[i].Ingredient" />
-                                </td>
-                                <td>
-                                    <span asp-validation-for="Ingredients[i].Ingredient" class="text-danger"></span>
-                                </td>
-                            </tr>
+                                <tr id="ingredient+@i">
+                                    <td>
+                                        <input asp-for="Ingredients[i].Ingredient" class="form-control" placeholder="Enter 1. ingredients" value="@Model.Ingredients[i].Ingredient" />
+                                    </td>
+                                    <td>
+                                        <span asp-validation-for="Ingredients[i].Ingredient" class="text-danger"></span>
+                                    </td>
+                                </tr>
                             }
 
                         }
-                    }
+                    }*@
 
-                 </tr>   
-                    
-         
-                   
-                    
-               
-            </tbody>
-            <tfoot style="margin-top: 15px">
-                <tr>
-                    <td colspan="2"><input type="button" onclick="addIngredientRow()" value="Add New Ingredients" class="btn btn-primary" /></td>
-                    <td colspan="2"><input type="button" onclick="deleteIngredientRow()" value="Delete Ingredient" class="btn btn-primary" /></td>
-                </tr>
-
-            </tfoot>
-        </table>
+    <p1> Instructions</p1>
+    <div id="tinstructions">
+                
+        @if (Model == null || Model.Instructions.Count < 2)
+        {
+            <div id="instructions0">
+                <textarea asp-for="Instructions[0].Instruction" class="form-control" placeholder="Enter 1. instructions" rows="1"></textarea>
+                <span asp-validation-for="Instructions[0].Instruction" class="text-danger"></span>
+            </div>
+        }
+        else
+        {
+            for (int i = 0; i < Model.Instructions.Count; i++)
+            {
+                var instructionscount = i + 1;
+                var instructionsId = "instruction" + i;
+                if (Model.Instructions[i].Instruction == null)
+                {
+        
+                    <div id="@instructionsId">
+                        <textarea asp-for="Instructions[i].Instruction" class="form-control" placeholder="Enter @instructionscount . ingredients " value="" rows="1"></textarea>
+                        <span asp-validation-for="Instructions[i].Instruction" class="text-danger"></span>
+                    </div>
+                }
+                else
+                {
+                    <div id="instruction+@i">
+                        <textarea asp-for="Instructions[i].Instruction" class="form-control" placeholder="Enter @instructionscount . ingredients " value="" rows="3"></textarea>
+                        <span asp-validation-for="Instructions[i].Instruction" class="text-danger"></span>
+                    </div>
+                }
+            }
+        }         
+    </div>
+    <div style="margin-top: 15px">
+            <a colspan="2"><input type="button" onclick="addInstructionRow()" value="Add New Instruction" class="btn btn-primary" /></a>
+            <a colspan="2"><input type="button" onclick="deleteInstructionRow()" value="Delete Instruction" class="btn btn-primary" /></a>
     </div>
     
     <button type="submit" value="Submit" class="btn btn-primary" style="margin-bottom:100px; margin-top: 20px">Submit</button>
