--- a/CookBooks/Views/Recipe/Edit.cshtml
+++ b/CookBooks/Views/Recipe/Edit.cshtml
@@ -1,11 +1,171 @@
 ﻿@using CookBook.Model;
+@using CookBook.Model.Enums;
+@using CookBooks.ViewModels;
 
-@model Recipe
 
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+@model EditRecipeViewModel
+
 @{
+    ViewData["Title"] = "Edit Recipe";
 }
 
+
 <h1>Edit Recipe</h1>
+
+
+<form method="post" asp-action="Edit" enctype="multipart/form-data">
+    <input type="hidden" value="Id" id="Id" />
+    <div class="form-group">
+        <label asp-for="Name">Recipe Name</label>
+        <input asp-for="Name" type="text" class="form-control" placeholder="Enter recipe name">
+        <span asp-validation-for="Name" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Description">Description</label>
+        <textarea asp-for="Description" type="text" class="form-control" placeholder="Enter description" rows="3"></textarea>
+        <span asp-validation-for="Description" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Image">Image</label>
+        <input asp-for="Image" type="file" class="form-control" rows="1">
+        <span asp-validation-for="Image" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="RecipeCategory" class="control-label"></label>
+        <select asp-for="RecipeCategory" asp-items="Html.GetEnumSelectList<RecipeCategory>()" class="form-control">
+            <option>--Select--</option>
+        </select>
+        <span asp-validation-for="RecipeCategory" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="CookTime">Cooking time</label>
+        <input asp-for="CookTime" type="text" class="form-control" placeholder="Enter cooking time in minutes">
+        <span asp-validation-for="CookTime" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Temperature">Cooking temperature</label>
+        <input asp-for="Temperature" type="text" class="form-control" placeholder="Enter cooking temperature">
+        <span asp-validation-for="Temperature" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Degree" class="control-label"></label>
+        <select asp-for="Degree" asp-items="Html.GetEnumSelectList<Degree>()" class="form-control">
+            <option>--Select--</option>
+        </select>
+        <span asp-validation-for="Degree" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="RecipeDifficultyLevel" class="control-label"></label>
+        <select asp-for="RecipeDifficultyLevel" asp-items="Html.GetEnumSelectList<RecipeDifficultyLevel>()" class="form-control">
+            <option>--Select--</option>
+        </select>
+        <span asp-validation-for="RecipeDifficultyLevel" class="text-danger"></span>
+    </div>
+    <p1> Ingredients</p1>
+
+
+    <table id="tingredients">
+        <tbody class="table" id="tbbodyIngredients">
+            @if (Model == null || Model.Ingredients.Count < 2)
+            {
+                <tr id="ingredient0">
+                    <td>
+                        <input asp-for="Ingredients[0].Ingredient" class="form-control" placeholder="Enter 1. ingredients" />
+                    </td>
+                    <td>
+                        <span asp-validation-for="Ingredients[0].Ingredient" class="text-danger"></span>
+                    </td>
+                </tr>
+            }
+            else
+            {
+                for (int i = 0; i < Model.Ingredients.Count; i++)
+                {
+                    var ingredientcount = i + 1;
+                    var ingredientId = "ingredient" + i;
+
+                    if (Model.Ingredients[i].Ingredient == null)
+                    {
+
+                        <tr id="@ingredientId">
+                            <td>
+                                <input asp-for="Ingredients[i].Ingredient" class="form-control" placeholder="Enter 1. ingredients" value="Enter @ingredientcount . ingredients " />
+                            </td>
+                            <td>
+                                <span asp-validation-for="Ingredients[i].Ingredient" class="text-danger"></span>
+                            </td>
+                        </tr>
+                    }
+
+                    else
+                    {
+
+                        <tr id="ingredient+@i">
+                            <td>
+                                <input asp-for="Ingredients[i].Ingredient" class="form-control" placeholder="Enter 1. ingredients" value="@Model.Ingredients[i].Ingredient" />
+                            </td>
+                            <td>
+                                <span asp-validation-for="Ingredients[i].Ingredient" class="text-danger"></span>
+                            </td>
+                        </tr>
+                    }
+                }
+            }
+        </tbody>
+        <tfoot style="margin-top: 15px">
+            <tr>
+                <td colspan="2"><input type="button" onclick="addIngredientRow()" value="Add New Ingredients" class="btn btn-primary" /></td>
+                <td colspan="2"><input type="button" onclick="deleteIngredientRow()" value="Delete Ingredient" class="btn btn-primary" /></td>
+            </tr>
+
+        </tfoot>
+    </table>
+
+    <p1> Instructions</p1>
+    <div id="tinstructions">
+
+        @if (Model == null || Model.Instructions.Count < 2)
+        {
+            <div id="instructions0">
+                <textarea asp-for="Instructions[0].Instruction" class="form-control" placeholder="Enter 1. instructions" rows="1"></textarea>
+                <span asp-validation-for="Instructions[0].Instruction" class="text-danger"></span>
+            </div>
+        }
+        else
+        {
+            for (int i = 0; i < Model.Instructions.Count; i++)
+            {
+                var instructionscount = i + 1;
+                var instructionsId = "instruction" + i;
+                if (Model.Instructions[i].Instruction == null)
+                {
+
+                    <div id="@instructionsId">
+                        <textarea asp-for="Instructions[i].Instruction" class="form-control" placeholder="Enter @instructionscount . ingredients " value="" rows="1"></textarea>
+                        <span asp-validation-for="Instructions[i].Instruction" class="text-danger"></span>
+                    </div>
+                }
+                else
+                {
+                    <div id="instruction+@i">
+                        <textarea asp-for="Instructions[i].Instruction" class="form-control" placeholder="Enter @instructionscount . ingredients " value="" rows="3"></textarea>
+                        <span asp-validation-for="Instructions[i].Instruction" class="text-danger"></span>
+                    </div>
+                }
+            }
+        }
+    </div>
+    <div style="margin-top: 15px">
+        <a colspan="2"><input type="button" onclick="addInstructionRow()" value="Add New Instruction" class="btn btn-primary" /></a>
+        <a colspan="2"><input type="button" onclick="deleteInstructionRow()" value="Delete Instruction" class="btn btn-primary" /></a>
+    </div>
+
+    <button type="submit" value="Submit" class="btn btn-primary" style="margin-bottom:100px; margin-top: 20px">Submit</button>
+</form>
