--- a/CookBooks/Views/Recipe/Edit.cshtml
+++ b/CookBooks/Views/Recipe/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@using CookBook.Model;
+﻿﻿@using CookBook.Model;
 @using CookBook.Model.Enums;
 @using CookBooks.ViewModels;
 
@@ -9,7 +9,7 @@
     ViewData["Title"] = "Edit Recipe";
 }
 
-
+<div class="container">
 <h1>Edit Recipe</h1>
 
 
@@ -169,3 +169,4 @@
 
     <button type="submit" value="Submit" class="btn btn-primary" style="margin-bottom:100px; margin-top: 20px">Submit</button>
 </form>
+</div>
