--- a/CookBooks/Views/Recipe/Index.cshtml
+++ b/CookBooks/Views/Recipe/Index.cshtml
@@ -7,7 +7,7 @@
 }
 
 
-<main role="main">
+<div class="container">
 
     <section class="py-5 text-center container">
     <div class="row py-lg-5">
@@ -41,6 +41,7 @@
                                     <div class="btn-group">
                                         <a type="button" asp-controller="Recipe" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">View</a>
                                         <a type="button" asp-controller="Recipe" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
+                                        <a type="button" asp-controller="Recipe" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
                                     </div>
                                     <small class="text-muted">@item.RecipeDifficultyLevel</small>
                                 </div>
@@ -52,7 +53,7 @@
             </div>
         </div>
     </div>
+</div>
        
               
 
-</main>
