--- a/CookBooks/Views/Account/Login.cshtml
+++ b/CookBooks/Views/Account/Login.cshtml
@@ -3,7 +3,7 @@
 
 @model LoginViewModel
 
-<h1>Login broo!!!!!</h1>
+<h1>Login page</h1>
 
 <div class="row">
     <div class="col-md-8 offset-2">
@@ -21,7 +21,7 @@
             </div>
             <div class="form-group">
                 <input class="btn btn-outline-success float right" type="submit" value="Log in" />
-                <a class="btn btn-outline-secondary" asp-controller="Club" asp-action="Index">Cancel</a>
+                
             </div>
         </form>
     </div>
