--- a/CookBooks/Views/Shared/_Layout.cshtml
+++ b/CookBooks/Views/Shared/_Layout.cshtml
@@ -29,9 +29,34 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Recipe" asp-action="Index">Recipe</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">SignIn</a>
-                        </li>
+                        @if(User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <form asp-area="" asp-controller="Account" asp-action="Logout">
+                                    <button class="btn btn-outline-danger">Logout</button>
+                                </form>
+                            </li>
+                            @if(User.IsInRole("Admin"))
+                            {
+
+                                <li class="nav-item">
+                                    <form asp-area="" asp-controller="Account" asp-action="Logout">
+                                        <button class="btn btn-outline-danger">Admin vole</button>
+                                    </form>
+                                </li>
+                            }
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Sign In</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                            </li>
+
+                        }
+
                     </ul>
                 </div>
             </div>
